Quick fix for SoGive logo appearing too small

--- a/base/style/main-base.less
+++ b/base/style/main-base.less
@@ -34,7 +34,10 @@ img.logo-large {
 	max-width:64px;	
 	max-height:64px;	
 }
-
+img.logo-xlarge {
+	max-width:128px;	
+	max-height:128px;	
+}
 @import "animation.less";
 
 // Page specific stuff
